finished js for the dashboard added render functions

--- a/week06/index.html
+++ b/week06/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workout Pal - Track Your Progress!</title>
-    <script src="script.js" defer></script>
+    <script src="scripts/script.js" defer></script>
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="author" content="Eric Ferreira">
     <link
@@ -50,7 +50,7 @@
             <div class="main-content">
                 <section class="goals-section">
                     <h2>Goals</h2>
-                    <div id="goals-list"></div>
+                    <div id="goals-list" class="goals-list"></div>
                     <button class="add-goal">+ Add New Goal</button>
                 </section>
 
