--- a/week06/index.html
+++ b/week06/index.html
@@ -28,7 +28,7 @@
             <div class="nav-buttons">
                 <button class="change-plan">Change Your Plan</button>
                 <button class="calculators">Calculators</button>
-                <button class="sign-up">Sign-up</button>
+                <button class="sign-up" onclick="window.location.href='signup.html'">Sign-up</button>
             </div>
         </nav>
     </header>
