--- a/week06/signup.html
+++ b/week06/signup.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="signup.css">
-    <script src="scripts/form.js defer"></script>
+    <link rel="stylesheet" href="styles/signup.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <script src="scripts/form.js" defer></script>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Eric Ferreira - Assignment for WDD 131">
     <meta name="author" content="Eric Ferreira">
     <title>Sign-up</title>
@@ -33,6 +33,19 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="signup-form">
+            <h2>Sign Up</h2>
+            <form id="signupForm">
+                <label for="name">Enter Your Name:</label>
+                <input type="text" id="name" name="name" placeholder="Your Name" required>
+                <button type="submit">Submit</button>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Workout Pal - track-work.org</p>
+    </footer>
 </body>
 
 </html>
