--- a/week06/index.html
+++ b/week06/index.html
@@ -21,14 +21,10 @@
             <div class="menu-nav">
                 <button class="menu-toggle">☰</button>
                 <ul class="nav-links">
-                    <li><a href="#workout">Change Workout</a></li>
-                    <li><a href="#weight">Weight</a></li>
+                    <li><a href="#workout">Dashboard</a></li>
+                    <li><a href="signup.html">Sign-up</a></li>
+                    <li><a href="calculators.html">Calculators</a></li>
                 </ul>
-            </div>
-            <div class="nav-buttons">
-                <button class="change-plan">Change Your Plan</button>
-                <button class="calculators">Calculators</button>
-                <button class="sign-up" onclick="window.location.href='signup.html'">Sign-up</button>
             </div>
         </nav>
     </header>
