--- a/week06/signup.html
+++ b/week06/signup.html
@@ -22,14 +22,10 @@
             <div class="menu-nav">
                 <button class="menu-toggle">☰</button>
                 <ul class="nav-links">
-                    <li><a href="index.html#workout">Change Workout</a></li>
-                    <li><a href="index.html#weight">Weight</a></li>
+                    <li><a href="index.html">Dashboard</a></li>
+                    <li><a href="signup.html">Sign-up</a></li>
+                    <li><a href="calculators.html">Calculators</a></li>
                 </ul>
-            </div>
-            <div class="nav-buttons">
-                <button class="change-plan">Change Your Plan</button>
-                <button class="calculators">Calculators</button>
-                <button class="sign-up" onclick="window.location.href='signup.html'">Sign-up</button>
             </div>
         </nav>
     </header>
@@ -39,7 +35,10 @@
             <form id="signupForm">
                 <label for="name">Enter Your Name:</label>
                 <input type="text" id="name" name="name" placeholder="Your Name" required>
+                <label for="email">Enter Your E-Mail:</label>
+                <input type="email" id="email" name="email" placeholder="Your E-Mail" required>
                 <button type="submit">Submit</button>
+
             </form>
         </section>
     </main>
