added js files for the add new workout and clear workout

--- a/week06/index.html
+++ b/week06/index.html
@@ -50,6 +50,7 @@
                 <section class="workout-section">
                     <h2>Workout</h2>
                     <button class="add-workout">+ Add New Workout</button>
+                    <button class="clear-workouts">Clear Workouts</button>
                     <div id="workout-list" class="workout-list"></div>
                 </section>
 
