fixed localstore workout errors

--- a/week06/index.html
+++ b/week06/index.html
@@ -42,9 +42,10 @@
             <div class="main-content">
                 <section class="goals-section">
                     <h2>Goals</h2>
-                    <div id="goals-list" class="goals-list"></div>
                     <button class="add-goal">+ Add New Goal</button>
                     <button class="clear-goals">Clear All Goals</button>
+                    <div id="goals-list" class="goals-list"></div>
+                    
                 </section>
 
                 <section class="workout-section">
@@ -57,10 +58,11 @@
                 <section class="weight-section">
                     <h2>Weight Tracking</h2>
                     <div class="weight-form">
-                        <input type="number" id="weightInput" placeholder="Enter your weight (kg)">
+                        <input type="number" id="weightSave" placeholder="Enter your weight (kg)">
                         <button id="logWeight">Log Weight</button>
                     </div>
-                    <div id="weight-chart"></div>
+                    <div id="weight-chart">
+                    </div>
                 </section>
 
                 <section class="streak-section">
