added render functions and load functions for localstorage

--- a/week06/index.html
+++ b/week06/index.html
@@ -60,6 +60,7 @@
                     <div class="weight-form">
                         <input type="number" id="weightSave" placeholder="Enter your weight (kg)">
                         <button id="logWeight">Log Weight</button>
+                        <button id="clearWeight">Clear Weight Tracker</button>
                     </div>
                     <div id="weight-chart">
                     </div>
