--- a/week06/signup.html
+++ b/week06/signup.html
@@ -37,6 +37,8 @@
                 <input type="text" id="name" name="name" placeholder="Your Name" required>
                 <label for="email">Enter Your E-Mail:</label>
                 <input type="email" id="email" name="email" placeholder="Your E-Mail" required>
+                <label for="address">Enter Your Address:</label>
+                <input type="text" id="address" name="address" placeholder="Your Address" required>
                 <button type="submit">Submit</button>
 
             </form>
