minor design fixes

--- a/week06/index.html
+++ b/week06/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo-land">
-            <img src="images/logo-resized3.webp" alt="wokoutpal-logo" loading="lazy" class="logo"/>
+            <img src="images/logo-resized3.webp" alt="wokoutpal-logo" loading="lazy" class="logo">
             <h1>Workout Pal</h1>
         </div>
         <nav class="navbar">
